<resources>
    <string name="app_name">AMazeByIgnatMiagkov</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="difficulty">Choose Difficulty</string>
    <string name="builder_text">Choose Builder</string>
    <string name="driver_text">Choose Driver</string>
    <string name="robot_text">Choose Robot Config</string>
    <string name="explore">Explore</string>
    <string name="revisit">Revisit</string>
    <string name="begin">Begin Maze</string>
    <string name="clicks">Clicks to Win: 10</string>
    <string name="clicks_1000">Clicks to Win: 1000</string>
    <string name="win">Proceeding to Win Stage, please wait...</string>
    <string name="win_message">CONGRATS YOU WON</string>
    <string name="lose_message">ROBOT CRASHED YOU LOST</string>
    <string name="return_home">Return to Title</string>
    <string name="go2winning">Go2Winning</string>
    <string name="go2losing">Go2Losing</string>


    <string-array name="builder">
        <item>DFS</item>
        <item>Prim</item>
        <item>Boruvka</item>
    </string-array>

    <string-array name="driver">
        <item>Manual</item>
        <item>Wizard</item>
        <item>WallFollower</item>
    </string-array>

    <string-array name="robot">
        <item>Premium</item>
        <item>Mediocre</item>
        <item>So-So</item>
        <item>Shaky</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_generating">GeneratingActivity</string>
    <string name="title_activity_amaze">AMazeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>