<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayAnimationFragment" >

    <Button
        android:id="@+id/go2losing"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/go2losing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clicks3" />

    <ImageButton
        android:id="@+id/upButton3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="240dp"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/downButton3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="72dp"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upButton3" />

    <ImageButton
        android:id="@+id/leftButton3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:rotation="-90"
        android:rotationY="0"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upButton3" />

    <ImageButton
        android:id="@+id/rightButton3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:rotation="90"
        android:rotationY="0"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.799"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upButton3" />

    <TextView
        android:id="@+id/clicks3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/clicks_1000"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go2winning"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/go2winning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clicks3" />

</androidx.constraintlayout.widget.ConstraintLayout>